--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^12.8.3",
     "dom": "0.0.3",
     "firebase": "^7.19.0",
+    "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "routor": "0.0.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
