--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dom": "0.0.3",
     "firebase": "^7.19.0",
     "history": "^5.1.0",
+    "javascript-time-ago": "^2.3.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
