--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "firebase": "^7.19.0",
     "history": "^5.1.0",
     "javascript-time-ago": "^2.3.10",
+    "mime-type": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pdf": "^5.5.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
@@ -19,6 +21,7 @@
     "routor": "0.0.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
